--- a/Simple Workday Logger/Simple Workday Logger.csproj
+++ b/Simple Workday Logger/Simple Workday Logger.csproj
@@ -7,4 +7,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ClassLibrary\ClassLibrary\ClassLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
